# frsm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README
cmake/: pods.cmake
lcmtypes/: frsm_pixel_map_t.lcm  frsm_planar_lidar_t.lcm  frsm_pose_t.lcm  frsm_rigid_transform_2d_t.lcm  sm_pixel_map_t.lcm
src/frsm-lcm/: CMakeLists.txt  frsm-lcm.cpp
src/libfrsm/: CMakeLists.txt  Contour.cpp  Contour.hpp  FRSM.cpp  FRSM.hpp  PixelMap.hpp  PixelMap.hxx  RasterLookupTable.cpp  RasterLookupTable.hpp  Scan.cpp  Scan.hpp  ScanMatcher.cpp  ScanMatcher.hpp  ScanMatchingUtils.hpp  frsm.hpp
src/libfrsm/test/: CMakeLists.txt  frsm-test.cpp
src/scan-matcher/: CMakeLists.txt  scan_matcher.cpp  test_scan_matcher.cpp
src/scanmatch/: CMakeLists.txt  Contour.cpp  Contour.hpp  RasterLookupTable.cpp  Scan.cpp  Scan.hpp  ScanMatcher.cpp  ScanMatcher.hpp  ScanMatchingUtils.hpp
